--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-.body {
-  margin: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -38,14 +34,10 @@
 .header__title {
   width: 730px;
   align-self: center;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   z-index: 3;
-}
-
-.header__title_text {
   font-size: 102px;
   font-weight: 600;
-  margin: 0;
   line-height: 96px;
 }
 
@@ -56,12 +48,8 @@
   left: 64px;
   bottom: 30px;
   z-index: 3;
-}
-
-.header__subtitle_text {
   font-size: 18px;
   font-weight: normal;
-  margin: 0;
   line-height: 25px;
 }
 
@@ -79,12 +67,6 @@
   width: 756px;
   height: 608px;
   z-index: 2;
-}
-
-.header__main-illustration_image {
-  margin: 0;
-  width: 756px;
-  height: 608px;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -111,7 +93,6 @@
   width: 80%;
   display: flex;
   position: relative;
-  min-height: 372px;
   justify-content: space-between;
 }
 
@@ -119,11 +100,6 @@
   margin: 0;
   padding: 0;
   width: 175px;
-}
-
-.two-columns__brief_text {
-  margin: 0;
-  padding: 0;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.2;
@@ -141,17 +117,16 @@
 .two-columns__paragraph {
   margin: 0 0 30px 0;
   padding: 0;
-}
-
-.two-columns__paragraph_text {
-  margin: 0;
-  padding: 0;
   font-weight: normal;
   line-height: 34px;
   font-size: 24px;
 }
 
-.two-columns__span_accent {
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0  ;
+}
+
+.two-columns__span-accent {
   margin: 0;
   padding: 0;
   font-weight: 600;
@@ -172,11 +147,6 @@
   padding: 0;
   width: 60%;
   z-index: 3;
-}
-
-.section-title_text {
-  margin: 0;
-  padding: 0;
   text-align: center;
   line-height: 1.15;
   font-size: 60px;
@@ -188,11 +158,6 @@
   padding: 0;
   width: 60%;
   z-index: 3;
-}
-
-.section-subtitle_text {
-  margin: 0;
-  padding: 0;
   text-align: center;
   line-height: 34px;
   font-size: 24px;
@@ -204,24 +169,20 @@
   padding: 0;
   width: 1100px;
   z-index: 3;
-}
-
-.flex-row {
-  margin: 60px 0 0;
-  padding: 0;
   display: flex;
   justify-content: space-between;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 .table__cell {
-  margin: 0;
+  margin: 60px 0 0;
   padding: 0;
   width: 250px;
 }
 
 .table__heading {
-  margin: 0 0 20px;
+  margin: 0 ;
   padding: 0;
   line-height: 1.15;
   font-size: 24px;
@@ -229,23 +190,24 @@
 }
 
 .table__text {
-  margin: 0;
+  margin: 20px 0 0;
   padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
 }
 
+.table__text:last-of-type {
+  margin-bottom: 0;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .section-title_theme_dark {
   margin: 90px auto 20px;
-}
-
-.section-title_text_theme_dark {
   color: white;
 }
 
-.section-subtitle_text_theme_dark {
+.section-subtitle_theme_dark {
   color: white;
 }
 
@@ -253,12 +215,8 @@
   margin: 0 auto 90px;
 }
 
-.flex-row_theme_dark {
-  margin: 80px 0 0;
-}
-
 .table__cell_theme_dark {
-  margin: 0;
+  margin: 80px 0 0;
   padding: 0;
   width: 200px;
   color: white;
@@ -275,7 +233,7 @@
 .feynman {
   margin: 0;
   padding: 0;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   display: flex;
   position: relative;
@@ -287,11 +245,6 @@
   padding: 0;
   width: 648px;
   z-index: 3;
-}
-
-.feynman__title_text {
-  margin: 0;
-  padding: 0;
   text-align: center;
   line-height: 1.15;
   font-size: 120px;
@@ -302,11 +255,6 @@
   margin: 70px auto 0;
   padding: 0;
   z-index: 3;
-}
-
-.feynman__subtitle_text {
-  margin: 0;
-  padding: 0;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
@@ -319,11 +267,6 @@
   right: 48px;
   top: 50%;
   z-index: 3;
-}
-
-.feynman__link_text {
-  margin: 0;
-  padding: 0;
   text-decoration: none;
   color: #2f80ed;
   line-height: 51px;
@@ -340,13 +283,6 @@
   left: 0;
   bottom: 0;
   z-index: 2;
-}
-
-.feynman__illustration_image {
-  margin: 0;
-  padding: 0;
-  width: 867px;
-  height: 637px;
 }
 
 .kaufman {
@@ -370,12 +306,6 @@
   z-index: 1;
 }
 
-.kaufman__triangle_image {
-  margin: 0;
-  width: 877px;
-  height: 877px;
-}
-
 .footer {
   margin: 0;
   padding: 0;
@@ -390,21 +320,16 @@
   padding: 0;
   width: 90%;
   position: relative;
-  height: auto;
-}
-
-.footer-row {
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: space-between;
-  list-style: none;
-  height: 100%;
+}
+
+.footer__column {
+  margin: 0;
+  padding: 0;
 }
 
 .footer__column_content_copyright {
-  margin: 0;
-  padding: 0;
   flex-basis: 711px;
   position: relative;
   display: flex;
@@ -415,7 +340,6 @@
 .logo_place_footer {
   margin: 0;
   padding: 0;
-
   width: 228px;
   height: 32px;
 }
@@ -424,20 +348,10 @@
   margin: 18px 0;
   padding: 0;
   width: fit-content;
-}
-
-.footer__author_text {
-  margin: 0 0;
-  padding: 0;
   color: white;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-}
-
-.footer__column_content_info {
-  margin: 0;
-  padding: 0;
 }
 
 .footer__column-heading {
@@ -472,8 +386,6 @@
 }
 
 .footer__column_content_social {
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-direction: column;
 }
