--- a/styles/style.css
+++ b/styles/style.css
@@ -9,15 +9,20 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-/*div, li, section, h2, a {*/
-/*  border: 1px solid red;*/
-/*}*/
+div, li, section, h2, a, .feynman, .digits {
+  border: 1px solid red;
+}
+
+.logo {
+  margin: 0;
+  padding: 0;
+  z-index: 3;
+}
 
 .logo_place_header {
   position: absolute;
   top: 30px;
   left: 64px;
-  z-index: 3;
 }
 
 .header {
