--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,11 +1,6 @@
 .cards__item {
-  margin: 0 100px 0 0;
+  margin: 0;
   padding: 0;
   width: 240px;
-  height: 400px;
   position: relative;
-}
-
-.cards__item:nth-of-type(3) {
-  margin-right: 0;
 }
