--- a/pages/index.css
+++ b/pages/index.css
@@ -86,6 +86,7 @@
 @import url("../blocks/footer/__columns/footer__columns.css");
 @import url("../blocks/footer/__column/footer__column.css");
 @import url("../blocks/footer/__column/_content/footer__column_content_copyright.css");
+@import url("../blocks/footer/__column/_content/footer__column_content_info.css");
 @import url("../blocks/footer/__column/_content/footer__column_content_social.css");
 @import url("../blocks/footer/__author/footer__author.css");
 @import url("../blocks/footer/__column-heading/footer__column-heading.css");
