--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -4,10 +4,10 @@
   width: 160px;
   height: 160px;
   border-radius: 100%;
-  /*transition-property: border-radius;*/
-  /*transition-duration: 1s;*/
+  transition-property: border-radius;
+  transition-duration: 1s;
 }
 
-/*.cards__image:hover {*/
-/*  border-radius: 5%;*/
-/*}*/
+.cards__image:hover {
+  border-radius: 5%;
+}
